--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -82,7 +82,7 @@
                         <a class="nav-link" href="#">Ajustes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="salir" href="#">Salir </a>
+                        <a class="nav-link" id="salir" href="{{ url_for('logout') }}">Salir </a>
                     </li>
                 </ul>
             </div>
@@ -93,7 +93,7 @@
     <div class="camera-container">
         <h3>Cámara</h3>
 
-        <img id="camera-frame" src="{{url_for('video')}}" width = "50%"/>
+        <img id="camera-frame" src="{{url_for('index')}}" width = "50%"/>
     
         <div class="d-flex justify-content-center">
             <button class="btn btn-primary-custom btn-custom" id="start-camera">Iniciar (Abrir Cámara)</button>
@@ -129,7 +129,7 @@
             if (!cameraActive) {
                 // Iniciar la cámara
                 cameraButton.textContent = 'Detener Cámara';
-                document.getElementById('camera-frame').src = "{{url_for('video')}}"; // Asegúrate que Flask maneje la URL
+                document.getElementById('camera-frame').src = "{{url_for('index')}}"; // Asegúrate que Flask maneje la URL
                 cameraActive = true;
             } else {
                 // Detener la cámara
